# crawl4r

./: .env.example  .gitignore  .ralph-state.json  CLAUDE.md  CODE_REVIEW.md  COMPREHENSIVE_REVIEW_REPORT.md  DRAFT.md  ENHANCEMENTS.md  README.md  coverage.json  docker-compose.yaml  generate_benchmark_data.py  llamaindex-vs-custom.md  pyproject.toml  run_benchmark.py  run_latency_benchmark.py  test_parallel_batches.sh
.docs/: deployment-log.md  services-ports.md
.docs/research/: 2026-01-20-ai-friendly-documentation-best-practices.md  cli-testing-report-2026-01-20.md  codebase-architecture.docs.md  crawl4ai-api-comparison.md  crawl4ai-docker-vs-sdk-configuration.md  documentation-implementation-gap-analysis.md  infrastructure-status-2026-01-20.md
.docs/sessions/: 2026-01-19-web-crawl-cli-phase-1.md
.docs/tmp/: 2026-01-20-environment-aware-config-fix.md  2026-01-20-transformers-warning-lazy-import-fix.md  crawl4ai-response-format-research.md  phase-2-implementation-complete.md
.specify/memory/: constitution.md
crawl4r/: __init__.py  chunker.py  config.py  crawl4ai_reader.py  processor.py  vector_store.py
crawl4r/api/: __init__.py  app.py
crawl4r/cli/: app.py  main.py
crawl4r/core/: __init__.py  config.py  instrumentation.py  interfaces.py  llama_settings.py  logger.py  metadata.py  quality.py  url_validation.py
crawl4r/processing/: __init__.py  chunker.py  llama_parser.py  processor.py
crawl4r/readers/: __init__.py  crawl4ai.py  file_watcher.py
crawl4r/resilience/: __init__.py  failed_docs.py  recovery.py  retry.py
crawl4r/services/: __init__.py  extractor.py  ingestion.py  mapper.py  models.py  queue.py  scraper.py  screenshot.py
crawl4r/storage/: embeddings.py  llama_embeddings.py  qdrant.py  tei.py  vector_store.py
data/crawl-code-claude/: pages.jsonl  summary.json
docs/: OPTIMIZATION_SUMMARY.md  PERFORMANCE_TUNING.md
docs/plans/: 2026-01-11-phase-1-setup.md  2026-01-11-phase-2-foundation.md  2026-01-16-llamaindex-refactor.md  2026-01-16-reorganize-rag-ingestion.md  2026-01-17-swap-markdown-node-parser.md  2026-01-17-use-simpledirectoryreader.md  2026-01-18-cli-web-crawling-design.md  2026-01-19-web-crawl-cli-phase-1.md  2026-01-19-web-crawl-cli-phase-3.md  2026-01-20-fix-partial-status-crash.md  2026-01-21-fix-crawl-file-optional-urls.md  2026-01-21-fix-extract-prompt-422-error.md  2026-01-21-fix-scrape-flag-parsing.md  2026-01-21-fix-watch-async-await-bug.md
examples/: crawl4ai_reader_usage.py  monitor_resources.py  stress_test_pipeline.py
rag_ingestion/: __init__.py  chunker.py  circuit_breaker.py  config.py  crawl4ai_reader.py  failed_docs.py  file_watcher.py  logger.py  main.py  processor.py  quality.py  recovery.py  tei_client.py  vector_store.py
scripts/: crawl_code_claude.py
specs/: .current-spec  .ralph-state.json
specs/001-rag-pipeline/: 2025-01-11-rag-pipeline-design.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/language-filter/: .coordinator-prompt.md  .progress.md  .ralph-state.json  design.md  requirements.md  research.md  tasks.md
specs/llamaindex-crawl4ai-reader/: .progress.md  .ralph-state.json  advanced-features-v2-proposal.md  design.md  requirements.md  research.md  spec-clarifications.md  tasks.md
specs/rag-ingestion/: .progress.md  .ralph-state.json  decisions.md  design.md  requirements.md  research-verification.md  research.md  spec-review.md  tasks.md  technical-review.md
specs/web-crawl-cli/: .ralph-state.json  design.md  requirements.md  research.md  tasks.md
test-e2e-watch/: 01-simple.md  02-with-frontmatter.md  04-large-document.md  05-code-blocks.md  06-nested-headings.md  07-special-chars.md  08-lists-tables.md  09-links-images.md  10-minimal.md  11-new-file.md
tests/: README.md  __init__.py  conftest.py  generate_benchmark_data.py  run_benchmark.py  run_latency_benchmark.py
tests/fixtures/: __init__.py  crawl4ai_responses.py
tests/integration/: __init__.py  conftest.py  test_cli_integration.py  test_crawl4ai_reader_integration.py  test_e2e_core.py  test_e2e_crawl_pipeline.py  test_e2e_errors.py  test_e2e_pipeline.py  test_e2e_reader_pipeline.py  test_e2e_watcher.py  test_file_watcher_integration.py  test_language_filter_e2e.py  test_qdrant_integration.py  test_tei_integration.py
tests/performance/: conftest.py  load_test_fixtures.py  test_e2e_performance.py  test_memory_usage.py  test_memory_usage_v2.py
tests/unit/: __init__.py  test_chunker.py  test_circuit_breaker.py  test_cli_commands.py  test_cli_delegation.py  test_config.py  test_crawl4ai_reader.py  test_crawl4ai_reader_async_init.py  test_crawl_interrupt.py  test_crawl_models.py  test_failed_docs.py  test_file_watcher.py  test_http_client.py  test_ingestion_partial_failures.py  test_ingestion_service.py  test_instrumentation.py  test_interfaces.py  (+31 more)
(+381 files in other folders)
